name:                pureli
version:             0.7.0
synopsis:            A purely functional, dynamically typed, parallel interpreted, lisp-like programming language
license:             BSD3
license-file:        LICENSE
author:              Gil Mizrahi
Homepage:            https://soupi.github.io/pureli
maintainer:          soupiral@gmail.com
category:            Language
build-type:          Simple

tested-with: GHC==7.10

extra-source-files:
  README.md

data-files:
  stdlib/*.pli


cabal-version:       >=1.10


source-repository head
  type: git
  location: https://github.com/soupi/pureli


library
  other-extensions:
    LambdaCase

  build-depends:
     base >=4.7
    ,containers >=0.5
    ,parsec >=3.1
    ,transformers >= 0.4
    ,parallel
    ,deepseq >= 1.4.0.0
    ,generic-deriving
    ,directory
    ,filepath
    ,haskeline
    ,ansi-terminal
    ,bytestring
    ,file-embed

  exposed-modules:
    Language.Pureli.AST
    Language.Pureli.Lexer
    Language.Pureli.Parser
    Language.Pureli.Printer
    Language.Pureli.Module
    Language.Pureli.Eval
    Language.Pureli.Repl
    Language.Pureli.Run
    Language.Pureli.Utils

  exposed:
    True

  buildable:
    True

  other-modules:
    Paths_pureli

  hs-source-dirs:      src
  default-language:    Haskell2010


  ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2


executable pureli
  main-is:             Main.hs
  other-extensions:    LambdaCase
  build-depends:
     base >=4.7
    ,pureli

  hs-source-dirs:      app
  default-language:    Haskell2010


  ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
               -rtsopts -eventlog


